--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -10,7 +10,7 @@ services:
       - "27017:27017"
     environment:
       MONGO_INITDB_ROOT_USERNAME: admin
-      MONGO_INITDB_ROOT_PASSWORD: password123
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_ROOT_PASSWORD}
       MONGO_INITDB_DATABASE: mern_auth
     volumes:
       - mongodb_data_dev:/data/db
@@ -30,7 +30,7 @@ services:
     environment:
       NODE_ENV: development
       MONGODB_URI: mongodb://mongodb:27017/mern_auth
-      JWT_SECRET: your_super_secret_jwt_key_change_this_in_production
+      JWT_SECRET: ${JWT_SECRET}
       PORT: 5000
     depends_on:
       - mongodb
