--- a/docker-compose.hub.yml
+++ b/docker-compose.hub.yml
@@ -28,7 +28,7 @@ services:
     environment:
       NODE_ENV: production
       MONGODB_URI: mongodb://mongodb:27017/mern_auth
-      JWT_SECRET: your_super_secret_jwt_key_change_this_in_production
+      JWT_SECRET: ${JWT_SECRET}
       PORT: 5000
     depends_on:
       - mongodb
